--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -1,75 +1,340 @@
-{% extends 'base.html' %}
-
-{% block content %}
-{% load static %}
-{% load cart %}
+{% extends 'base.html' %} {% block content %} {% load static %} {% load cart %}
 {% load custom_filter %}
 <!-- body -->
 <div class="container-fluid mt-3">
-	<div class="row">
+  <div class="row">
+    <!-- filter -->
 
+    <div class="col-lg-3 mx-auto">
+      <div
+        class="list-group"
+        style="background-color: #f8f9fa; border-color: #f8f9fa"
+      >
+        <a
+          href="/"
+          class="list-group-item list-group-item-action btn btn-outline-success"
+          style="
+            font-size: 18px;
+            font-family: 'Open Sans', sans-serif;
+            /* color: red !important; */
+            text-align: center;
+          "
+          ><i class="fas fa-shopping-cart mr-2"></i>All Products</a
+        >
 
-		<!-- filter -->
+        {% for category in categories %}
+        <a
+          href="/?category={{category.id}}"
+          class="list-group-item list-group-item-action btn btn-outline-success"
+          style="
+            font-size: 18px;
+            font-family: 'Open Sans', sans-serif;
+            /* color: red; */
+            text-align: center;
+          "
+          ><i class="fas fa-{{category.icon}}"></i>{{category.name}}</a
+        >
+        {% endfor %}
+      </div>
+    </div>
+    <!-- all products -->
+    <div id="products" class="col-lg-9 mx-auto" style="margin-top: 20px">
+      <div class="row mx-auto">
+        {% for product in products %}
+        <div
+          class="card mx-auto mb-3"
+          id="{{product.id}}"
+          style="
+            width: 18rem;
+            height: 26rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+          "
+        >
+          <img
+            class="card-img-top"
+            src="{{product.image.url}}"
+            alt="Card image cap"
+            style="height: 50%; object-fit: contain"
+          />
+          <div
+            class="card-body d-flex flex-column justify-content-center align-items-center"
+          >
+            <p class="card-title text-center">{{product.name}}</p>
+            <p class="card-text text-center">
+              <b>{{product.price}}</b><span>&#128;</span>
+            </p>
+            <!-- {{product | is_in_cart:request.session.cart }} -->
+          </div>
 
-		<div class="col-lg-3 mx-auto">
-			<div class="list-group">
+          <div class="card-footer p-0 no-gutters">
+            {% if product|is_in_cart:request.session.cart %}
+            <div class="row no-gutters">
+              <form action="/#{{product.id}}" class="col-2" method="post">
+                {% csrf_token %}
+                <input
+                  hidden
+                  type="text"
+                  name="product"
+                  value="{{product.id}}"
+                />
+                <input hidden type="text" name="remove" value="True" />
+                <input
+                  type="submit"
+                  value=" - "
+                  class="btn btn-block btn-success border-right"
+                  style="background-color: palevioletred"
+                />
+              </form>
+              <div
+                class="text-center col btn btn-success d-flex align-items-center justify-content-center"
+                style="background-color: palevioletred"
+              >
+                {{product|cart_quantity:request.session.cart}} in Cart
+              </div>
+              <form action="/#{{product.id}}" class="col-2" method="post">
+                {% csrf_token %}
+                <input
+                  hidden
+                  type="text"
+                  name="product"
+                  value="{{product.id}}"
+                />
+                <input
+                  type="submit"
+                  value=" + "
+                  class="btn btn-block btn-success border-left"
+                  style="background-color: palevioletred"
+                />
+              </form>
+            </div>
+            {% else %}
+            <form action="/#{{product.id}}" method="POST" class="btn-block">
+              {% csrf_token %}
+              <input hidden type="text" name="product" value="{{product.id}}" />
+              <input
+                type="submit"
+                class="float-right btn btn-success form-control"
+                value="Add To Cart"
+                style="background-color: palevioletred"
+              />
+            </form>
+            {% endif %}
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <!-- Footer -->
+  <footer class="bg-info text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a
+          class="btn btn-outline-light btn-floating m-1"
+          href="#!"
+          role="button"
+          ><i class="fab fa-facebook-f"></i
+        ></a>
 
-				<a href="/" class="list-group-item list-group-item-action btn btn-outline-success">All Products</a>
+        <!-- Twitter -->
+        <a
+          class="btn btn-outline-light btn-floating m-1"
+          href="#!"
+          role="button"
+          ><i class="fab fa-twitter"></i
+        ></a>
 
-				{% for category in categories %}
-				<a href="/?category={{category.id}}"
-					class="list-group-item list-group-item-action btn btn-outline-success ">{{category.name}}</a>
-				{% endfor %}
-			</div>
-		</div>
+        <!-- Google -->
+        <a
+          class="btn btn-outline-light btn-floating m-1"
+          href="#!"
+          role="button"
+          ><i class="fab fa-google"></i
+        ></a>
 
-		<!-- all products -->
-		<div id='products' class="col-lg-9 mx-auto">
-			<div class="row mx-auto">
-				{% for product in products %}
-				<div class="card mx-auto mb-3" id={{product.id}} style="width: 18rem;">
-					<img class="card-img-top" src="{{product.image.url}}" alt="Card image cap">
-					<div class="card-body">
-						<p class="card-title">{{product.name}}</p>
-						<p class="card-text"><b>{{product.price}}</b><span>&#128;</span></p>
-						<!-- {{product | is_in_cart:request.session.cart }} -->
-					</div>
+        <!-- Instagram -->
+        <a
+          class="btn btn-outline-light btn-floating m-1"
+          href="#!"
+          role="button"
+          ><i class="fab fa-instagram"></i
+        ></a>
 
-					<div class="card-footer p-0 no-gutters">
+        <!-- Linkedin -->
+        <a
+          class="btn btn-outline-light btn-floating m-1"
+          href="#!"
+          role="button"
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
 
-						{% if product|is_in_cart:request.session.cart %}
-						<div class="row no-gutters">
-							<form action="/#{{product.id}}" class="col-2 " method="post">
-								{% csrf_token %}
-								<input hidden type="text" name='product' value='{{product.id}}'>
-								<input hidden type="text" name='remove' value='True'>
-								<input type="submit" value=" - " class="btn btn-block btn-success border-right">
-							</form>
-							<div class="text-center col btn btn-success">{{product|cart_quantity:request.session.cart}} in Cart</div>
-							<form action="/#{{product.id}}" class="col-2 " method="post">
-								{% csrf_token %}
-								<input hidden type="text" name='product' value='{{product.id}}'>
-								<input type="submit" value=" + " class="btn btn-block btn-success border-left">
-							</form>
-						</div>
-						{% else %}
-						<form action="/#{{product.id}}" method="POST" class="btn-block">
-							{% csrf_token %}
-							<input hidden type="text" name='product' value='{{product.id}}'>
-							<input type="submit" class="float-right btn btn-success form-control"
-								value="Add To Cart">
-						</form>
-						{% endif %}
+        <!-- Github -->
+        <a
+          class="btn btn-outline-light btn-floating m-1"
+          href="#!"
+          role="button"
+          ><i class="fab fa-github"></i
+        ></a>
+      </section>
+      <!-- Section: Social media -->
 
-					</div>
+      <!-- Section: Form -->
+      <section class="">
+        <form action="">
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
+            <!--Grid column-->
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for our newsletter</strong>
+              </p>
+            </div>
+            <!--Grid column-->
 
-				</div>
-				{% endfor %}
-			</div>
-		</div>
-	</div>
+            <!--Grid column-->
+            <div class="col-md-5 col-12">
+              <!-- Email input -->
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example21" class="form-control" />
+                <label class="form-label" for="form5Example21"
+                  >Email address</label
+                >
+              </div>
+            </div>
+            <!--Grid column-->
+
+            <!--Grid column-->
+            <div class="col-auto">
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-outline-light mb-4">
+                Subscribe
+              </button>
+            </div>
+            <!--Grid column-->
+          </div>
+          <!--Grid row-->
+        </form>
+      </section>
+      <!-- Section: Form -->
+
+      <!-- Section: Text -->
+      <section class="mb-4">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+          distinctio earum repellat quaerat voluptatibus placeat nam, commodi
+          optio pariatur est quia magnam eum harum corrupti dicta, aliquam sequi
+          voluptate quas.
+        </p>
+      </section>
+      <!-- Section: Text -->
+
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Links</h5>
+
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Link 1</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 2</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 3</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Link 4</a>
+              </li>
+            </ul>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2023 Shopinify. All rights reserved.:
+      <a class="text-white">Shopinify.com</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 </div>
-
-
 
 {% endblock %}
