--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -1,107 +1,187 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-VIS/RnVCmXpARnEMDU1+v7Ow4ImbrKk8pqf4roZfvO+vAPvUKS/dC9IJlWEtmzsB15QeLwHf6CggQgpk5U3q5A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Shopinify</title>
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+      nav {
+        background-color: palevioletred;
+      }
+      .one-edge-shadow {
+        box-shadow: 0 8px 2px -5px rgb(246, 245, 245);
+      }
+      .display-8 {
+        font-weight: 200;
+        font-size: 30px;
+        font-colour: $teal-200;
+      }
 
-  <title>Shopinify</title>
+      .card-registration .select-input.form-control[readonly]:not([disabled]) {
+        font-size: 1rem;
+        line-height: 2.15;
+        padding-left: 0.75em;
+        padding-right: 0.75em;
+      }
+      .card-registration .select-arrow {
+        top: 13px;
+      }
+      .navbar-brand {
+        display: flex;
+        align-items: center;
+      }
 
-  <style>
-    nav{
-      background-color: green;
-    }
-    .one-edge-shadow {
-              box-shadow: 0 8px 2px -5px rgb(246, 245, 245);
-}
-.display-8{
-  font-weight: 200;
-  font-size: 30px;
-  font-colour: $teal-200;
-}
-  </style>
-</head>
+      .navbar-brand span {
+        margin-left: 8px;
+      }
 
-<body>
-  <!-- navbar -->
+      .navbar-brand i {
+        font-size: 1.8rem;
+      }
 
-<nav class="one-edge-shadow
-  navbar navbar-light
-  sticky-top navbar 
-  navbar-expand-lg
-  text-white">
-    <a style="color:#fff" class="navbar-brand ms-3 text-dark " href="/">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+      .nav-link {
+        color: #fff;
+      }
 
-    <img src="https://www.freepnglogos.com/uploads/shopping-cart-png/shopping-cart-royal-brites-poster-foam-board-photo-paper-royal-lace-19.png" width="200" alt="shopping cart, royal brites poster foam board photo paper royal lace"  style="width:50px;height:50px,color:#fff;"><span style="color:#fff;padding-left: 18px;">Shopinify</span></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      .nav-link:hover {
+        color: #ccc;
+      }
+    </style>
+  </head>
 
+  <body>
+    <!-- navbar -->
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/store" style="color:#fff">Store <span class="sr-only">(current)</span></a>
-        </li>
+    <nav
+      class="one-edge-shadow navbar navbar-light sticky-top navbar navbar-expand-lg text-white"
+    >
+      <a style="color: #fff" class="navbar-brand ms-3 text-dark" href="/">
+        <link
+          rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+          crossorigin="anonymous"
+        />
 
-          </ul>
+        <img
+          src="https://www.freepnglogos.com/uploads/shopping-cart-png/shopping-cart-royal-brites-poster-foam-board-photo-paper-royal-lace-19.png"
+          width="200"
+          alt="shopping cart, royal brites poster foam board photo paper royal lace"
+          style="width:50px;height:50px,color:#fff;"
+        />
+        <span style="color: #fff; padding-left: 18px">Shopinify</span>
+      </a>
 
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/store" style="color: #fff"
+              >Store <span class="sr-only">(current)</span></a
+            >
+          </li>
+        </ul>
 
+        <ul class="navbar-nav my-2 my-lg-0">
+          <li class="nav-item active">
+            <a style="color: #fff" class="nav-link" href="/cart"
+              >Cart
+              <span class="badge badge-success"
+                >{{request.session.cart.keys|length}}</span
+              ><span class="sr-only">(current)</span></a
+            >
+          </li>
 
-      <ul class=" navbar-nav my-2 my-lg-0">
+          {% if request.session.customer %}
 
-        <li class="nav-item active">
-          <a style="color:#fff" class="nav-link" href="/cart">Cart 
-            <span class="badge badge-success">{{request.session.cart.keys|length}}</span>
-            <span class="sr-only">(current)</span></a>
-        </li>
+          <li class="nav-item active">
+            <a style="color: #fff" class="nav-link" href="/orders">
+              <i class="fas fa-shopping-bag"></i> Orders<span class="sr-only"
+                >(current)</span
+              >
+            </a>
+          </li>
 
-        {% if request.session.customer %}
-        
-        <li class="nav-item active ">
-          <a style="color:#fff" class="nav-link" href="/orders">Orders<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active ">
-          <a class="nav-link" href="/logout" style="color:#fff">Logout<span class="sr-only">(current)</span></a>
-        </li>
-        {% else %}
-       
-        <li class="nav-item active">
-          <a class="nav-link" href="/signup" style="color:#fff">Signup<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/login" style="color:#fff">Login<span class="sr-only">(current)</span></a>
-        </li>
-        {% endif %}
+          <li class="nav-item active">
+            <a class="nav-link" href="/logout" style="color: #fff">
+              <i class="fas fa-sign-out-alt"></i> Logout<span class="sr-only"
+                >(current)</span
+              >
+            </a>
+          </li>
 
+          {% else %}
 
-      </ul>
+          <li class="nav-item active">
+            <a class="nav-link" href="/signup" style="color: #fff">
+              <i class="fas fa-user-plus"></i> Signup<span class="sr-only"
+                >(current)</span
+              >
+            </a>
+          </li>
 
+          <li class="nav-item active">
+            <a class="nav-link" href="/login" style="color: #fff">
+              <i class="fas fa-sign-in-alt"></i> Login<span class="sr-only"
+                >(current)</span
+              >
+            </a>
+          </li>
 
-    </div>
-  </nav>
-  <!---->
-  {% block content %}{% endblock %}
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
+    <!---->
+    {% block content %}{% endblock %}
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-</body>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
