--- a/store/templates/signup.html
+++ b/store/templates/signup.html
@@ -1,86 +1,203 @@
-{% extends 'base.html' %}
-
-
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <div class="container mt-4">
-    
-    <div class="p-3 m-3">
-
-        
-        <div class="col-lg-5 rounded mx-auto border pt-4">
-            <div class="text-center col">
-            
-                <img
-                src="https://th.bing.com/th/id/Rd51d7c0fde6d96a31538a86cbd57f3c0?rik=%2fTJxRkU2V371QQ&riu=http%3a%2f%2ftechnologyend.com%2fwp-content%2fuploads%2f2015%2f11%2fwhy-shop-online.jpg&ehk=v1KiYT0i5U1ABCRueDSdLqnazh2BdlVD89Z4qXE0Kgs%3d&risl=&pid=ImgRaw" alt=""
-                class="" style="height: 150px;">
-            <!-- <hr> -->
-            <hr>
-            </div>
-            <h3 class="alert alert-success rounded-pill" style="text-align:center">Create an Account</h3>
-            <form action="/signup" method="POST">
-                
-                {% csrf_token %}
-
-                {% if error%}
-                <div class="alert alert-danger" role="alert">
-                    {{error}}
-                </div>
-                {% endif %}
-                <!-- firstname -->
-                <div class="form-group">
-                    <label for="">First Name</label>
-                    <input type="text" name="firstname"
-                     id="" value="{{values.first_name}}" class="form-control form-control-sm" 
-                     placeholder="">
-                </div>
-
-                <!-- last name -->
-                <div class="form-group">
-                    <label for="">Last Name</label>
-                    <input type="text" name="lastname" 
-                    id="" value="{{values.last_name}}" class="form-control form-control-sm"
-                    >
-                </div>
-
-                <!-- phone -->
-                <div class="form-group">
-                    <label for="">Phone</label>
-                    <input type="text" name="phone" 
-                    id="" class="form-control form-control-sm"
-                    value="{{values.phone}}"
-                    placeholder="9876543210"
-                    >
-                </div>
-                <!-- email -->
-                <div class="form-group">
-                    <label for="">Email</label>
-                    <input required type="email" name="email" id=""
-                    value="{{values.email}}" 
-                    class=" form-control-sm form-control" placeholder="abc@gmail.com">
-                </div>
-
-
-                <!-- password -->
-                <div class="form-group">
-                    <label for="">Password</label>
-                    <input type="password" 
-                    name="password" 
-                    id=""
-                     class="form-control form-control-sm">
-                </div>
-
-                <!--Checkme button-->
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label d-grid gap-2" for="exampleCheck1">Check me out</label>
-                </div>
-                <hr>
-                <button type="submit" class="btn btn-sm btn-success col-lg-12">Create an account</button>
-
-            </form>
+  <div class="p-3 m-3">
+    <div class="col-lg-5 rounded mx-auto border pt-4">
+      <div class="text-center col">
+        <img
+          src="https://th.bing.com/th/id/Rd51d7c0fde6d96a31538a86cbd57f3c0?rik=%2fTJxRkU2V371QQ&riu=http%3a%2f%2ftechnologyend.com%2fwp-content%2fuploads%2f2015%2f11%2fwhy-shop-online.jpg&ehk=v1KiYT0i5U1ABCRueDSdLqnazh2BdlVD89Z4qXE0Kgs%3d&risl=&pid=ImgRaw"
+          alt=""
+          class=""
+          style="height: 150px"
+        />
+        <hr />
+      </div>
+      <h3 class="alert alert-success rounded-pill" style="text-align: center">
+        Create an Account
+      </h3>
+      <form action="/signup" method="POST">
+        {% csrf_token %} {% if error%}
+        <div class="alert alert-danger" role="alert">{{error}}</div>
+        {% endif %}
+        <div class="form-group">
+          <label for="">First Name</label>
+          <input
+            type="text"
+            name="firstname"
+            id=""
+            value="{{values.first_name}}"
+            class="form-control form-control-sm"
+            placeholder=""
+          />
         </div>
+
+        <div class="form-group">
+          <label for="">Last Name</label>
+          <input
+            type="text"
+            name="lastname"
+            id=""
+            value="{{values.last_name}}"
+            class="form-control form-control-sm"
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="">Phone</label>
+          <input
+            type="text"
+            name="phone"
+            id=""
+            class="form-control form-control-sm"
+            value="{{values.phone}}"
+            placeholder="9876543210"
+          />
+        </div>
+        <div class="form-group">
+          <label for="">Email</label>
+          <input
+            required
+            type="email"
+            name="email"
+            id=""
+            value="{{values.email}}"
+            class="form-control-sm form-control"
+            placeholder="abc@gmail.com"
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="">Password</label>
+          <input
+            type="password"
+            name="password"
+            id=""
+            class="form-control form-control-sm"
+          />
+        </div>
+
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+          <label class="form-check-label d-grid gap-2" for="exampleCheck1"
+            >Check me out</label
+          >
+        </div>
+        <hr />
+        <button type="submit" class="btn btn-sm btn-success col-lg-12">
+          Create an account
+        </button>
+      </form>
     </div>
+  </div>
+  <div>
+    <section class="h-100 bg-dark">
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col">
+            <div class="card card-registration my-4">
+              <div class="row g-0">
+                <div class="col-xl-6 d-none d-xl-block">
+                  <img
+                    src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/img4.webp"
+                    alt="Sample photo"
+                    class="img-fluid"
+                    style="
+                      border-top-left-radius: 0.25rem;
+                      border-bottom-left-radius: 0.25rem;
+                    "
+                  />
+                </div>
+                <div class="col-xl-6">
+                  <div class="card-body p-md-5 text-black">
+                    <h3 class="mb-5 text-uppercase">Create An Account</h3>
+                    <form action="/signup" method="POST">
+                      <div class="row">
+                        <div class="col-md-6 mb-4">
+                          <label class="form-label" for="form3Example1m"
+                            >First name:</label
+                          >
+                          <div class="form-outline">
+                            <input
+                              type="text"
+                              id="form3Example1m"
+                              class="form-control form-control-lg"
+                              value="{{values.first_name}}"
+                              placeholder=" First Name"
+                            />
+                          </div>
+                        </div>
+                        <div class="col-md-6 mb-4">
+                          <div class="form-outline">
+                            <label class="form-label" for="form3Example1n"
+                              >Last name:</label
+                            >
+                            <input
+                              type="text"
+                              id="form3Example1n"
+                              class="form-control form-control-lg"
+                              placeholder=" Last  Name"
+                              value="{{values.last_name}}"
+                            />
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="form-outline mb-4">
+                        <label class="form-label mt-2" for="form3Example90"
+                          >Phone:</label
+                        >
+                        <input
+                          type="tel"
+                          class="form-control form-control-lg"
+                          id="phone"
+                          placeholder="phone number"
+                          value="{{values.phone}}"
+                        />
+                      </div>
+
+                      <div class="form-outline mb-4">
+                        <label class="form-label mt-2" for="form3Example97"
+                          >Email:</label
+                        >
+                        <input
+                          type="text"
+                          id="form3Example97"
+                          class="form-control form-control-lg"
+                          placeholder="Email"
+                          value="{{values.email}}"
+                        />
+                      </div>
+                      <div class="form-outline mb-4">
+                        <label class="form-label mt-2" for="form3Example97"
+                          >Password:</label
+                        >
+                        <input
+                          type="password"
+                          id="password"
+                          class="form-control form-control-lg"
+                          placeholder="password"
+                        />
+                      </div>
+
+                      <div class="d-flex justify-content-end pt-3">
+                        <button
+                          type="button"
+                          type="submit"
+                          class="btn btn-warning btn-lg ms-2"
+                        >
+                          Create An Account
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 </div>
 
 {% endblock %}
