Ecommerce-Project-with-Python-Django-and-Bootstrap

--- a/store/templates/signup.html
+++ b/store/templates/signup.html
@@ -90,7 +90,7 @@
     </div>
   </div>
   <div>
-    <section class="h-100 bg-dark">
+    <!-- <section class="h-100 bg-dark">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
           <div class="col">
@@ -196,7 +196,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   </div>
 </div>
 
