--- a/store/templates/login.html
+++ b/store/templates/login.html
@@ -55,7 +55,7 @@
       </form>
     </div>
   </div>
-  <section class="vh-100" style="background-color: #9a616d">
+  <!-- <section class="vh-100" style="background-color: #9a616d">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col col-xl-10">
@@ -133,7 +133,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 </div>
 
 {% endblock %}
